--- a/index.html
+++ b/index.html
@@ -130,11 +130,12 @@
                     <img src="your-photo.jpg" alt="Your Name" class="profile-photo">
                     <h3>Your Full Name</h3>
                     <div class="social-icons">
-                        <a href="mailto:your_email@example.com" title="Email">✉️</a>
-                        <a href="https://scholar.google.com/citations?user=your_id" title="Google Scholar">🎓</a>
-                        <a href="https://github.com/username" title="GitHub">💻</a>
-                        <a href="https://linkedin.com/in/your_profile" title="LinkedIn">💼</a>
-                        <a href="cv/CV_bayram_27Aug25.pdf" title="CV">📄</a>
+                        <a href="mailto:your_email@example.com" title="Email"><img src="https://upload.wikimedia.org/wikipedia/commons/4/4e/Mail_%28iOS%29.svg" alt="Email" width="24" height="24"></a>
+                        <a href="https://scholar.google.com/citations?user=your_id" title="Google Scholar"><img src="https://upload.wikimedia.org/wikipedia/commons/c/c7/Google_Scholar_logo.svg" alt="Google Scholar" width="32" height="32"></a>
+                        <a href="https://github.com/username" title="GitHub"><img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/github.svg" alt="GitHub" width="24" height="24"></a>
+                        <a href="https://linkedin.com/in/your_profile" title="LinkedIn"><img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/linkedin.svg" alt="LinkedIn" width="24" height="24"></a>
+                        <a href="https://x.com/bayrameda_ee" title="X"><img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/x.svg" alt="X" width="24" height="24"></a>
+                        <a href="cv/CV_bayram_27Aug25.pdf" title="CV"><h3>CV</h3></a>
                     </div>
                 </div>
                 <div class="bio-right">
@@ -153,9 +154,9 @@
                         <div style="flex: 1;">
                             <h3>Education</h3>
                             <ul class="bullet-list education">
-                                <li>PhD, University Name, Year</li>
-                                <li>M.S., University Name, Year</li>
-                                <li>B.S., University Name, Year</li>
+                                <li> PhD, University Name, Year</li>
+                                <li> M.S., University Name, Year</li>
+                                <li> B.S., University Name, Year</li>
                             </ul>
                         </div>
                     </div>
@@ -215,4 +216,5 @@
     </div>
 
 </body>
+
 </html>
