--- a/index.html
+++ b/index.html
@@ -3,115 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Name - Researcher Website</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            line-height: 1.6;
-        }
-        .header {
-            background-color: #333;
-            overflow: hidden;
-            position: fixed;
-            top: 0;
-            width: 100%;
-            display: flex;
-            justify-content: center;
-            padding: 10px 0;
-            z-index: 1000;
-        }
-        .header a {
-            color: white;
-            padding: 14px 20px;
-            text-decoration: none;
-            text-align: center;
-        }
-        .content {
-            padding-top: 60px; /* Adjust for fixed header */
-        }
-        .section {
-            padding: 40px;
-        }
-        .white-bg {
-            background-color: #f4f4f4;
-        }
-        .gray-bg {
-            background-color: #e2e2e2;
-        }
-        .home-section {
-            display: flex;
-            align-items: center;
-            justify-content: space-around;
-            flex-wrap: wrap;
-        }
-        .profile-left {
-            text-align: center;
-            margin: 20px;
-        }
-        .profile-photo {
-            width: 150px;
-            height: 150px;
-            border-radius: 50%;
-            object-fit: cover;
-            border: 2px solid #333;
-        }
-        .social-icons a {
-            margin: 0 10px;
-            color: #333;
-            font-size: 24px;
-            text-decoration: none;
-        }
-        .bio-right {
-            max-width: 600px;
-            margin: 20px;
-        }
-        .bio-right h2 {
-            border-bottom: 2px solid #333;
-            padding-bottom: 5px;
-        }
-        .bullet-list {
-            list-style-type: none;
-            padding: 0;
-        }
-        .bullet-list li:before {
-            content: "•";
-            color: #007bff;
-            display: inline-block;
-            width: 1em;
-            margin-left: -1em;
-        }
-        .bullet-list.education li:before {
-            content: "🎓";
-            font-size: 1.2em;
-            color: #000;
-        }
-        .section-title {
-            text-align: center;
-            font-size: 2.5em;
-            margin-bottom: 20px;
-        }
-        .paper-box {
-            border: 1px solid #ccc;
-            padding: 15px;
-            margin-bottom: 20px;
-            border-radius: 8px;
-        }
-        .paper-links a {
-            display: inline-block;
-            background-color: #007bff;
-            color: white;
-            padding: 8px 12px;
-            text-decoration: none;
-            border-radius: 5px;
-            margin-right: 10px;
-        }
-        .patent-image {
-            max-width: 200px;
-            height: auto;
-            margin-top: 10px;
-        }
-    </style>
+    <title>Eda Bayram - Researcher AI, CogSci</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
@@ -127,37 +20,101 @@
         <div id="home" class="section white-bg">
             <div class="home-section">
                 <div class="profile-left">
-                    <img src="your-photo.jpg" alt="Your Name" class="profile-photo">
-                    <h3>Your Full Name</h3>
+                    <img src="imgs\profile.jpg" alt="Your Name" class="profile-photo">
+                    <h2>Eda Bayram, PhD</h2>
                     <div class="social-icons">
-                        <a href="mailto:your_email@example.com" title="Email"><img src="https://upload.wikimedia.org/wikipedia/commons/4/4e/Mail_%28iOS%29.svg" alt="Email" width="24" height="24"></a>
-                        <a href="https://scholar.google.com/citations?user=your_id" title="Google Scholar"><img src="https://upload.wikimedia.org/wikipedia/commons/c/c7/Google_Scholar_logo.svg" alt="Google Scholar" width="32" height="32"></a>
-                        <a href="https://github.com/username" title="GitHub"><img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/github.svg" alt="GitHub" width="24" height="24"></a>
-                        <a href="https://linkedin.com/in/your_profile" title="LinkedIn"><img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/linkedin.svg" alt="LinkedIn" width="24" height="24"></a>
+                        <a href="mailto:eda.bayram@ucdconnect.ie" title="Email"><img src="https://upload.wikimedia.org/wikipedia/commons/4/4e/Mail_%28iOS%29.svg" alt="Email" width="24" height="24"></a>
+                        <a href="https://scholar.google.com/citations?user=0Y-meVgAAAAJ&hl=en" title="Google Scholar"><img src="https://upload.wikimedia.org/wikipedia/commons/c/c7/Google_Scholar_logo.svg" alt="Google Scholar" width="32" height="32"></a>
+                        <a href="https://github.com/bayrameda" title="GitHub"><img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/github.svg" alt="GitHub" width="24" height="24"></a>
+                        <a href="https://www.linkedin.com/in/bayrameda/" title="LinkedIn"><img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/linkedin.svg" alt="LinkedIn" width="24" height="24"></a>
                         <a href="https://x.com/bayrameda_ee" title="X"><img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/x.svg" alt="X" width="24" height="24"></a>
                         <a href="cv/CV_bayram_27Aug25.pdf" title="CV"><h3>CV</h3></a>
                     </div>
                 </div>
                 <div class="bio-right">
                     <h2>About</h2>
-                    <p>This is a placeholder for your bio. You can add external links here, for example, a link to <a href="https://www.youruniversity.edu" target="_blank">your university's website</a> or your <a href="https://www.researchgate.net/" target="_blank">ResearchGate profile</a>.</p>
+                    <p>
+                        I am an AI Researcher in the Smart Network Lab (SNI) at the <a href="https://www.huawei.com/ie/" target="_blank">Huawei Ireland Research Center in Dublin </a>.
+                        Under the Network Digital Twin team, I research and engineer efficient and scalable machine learning models for simulation of telecom networks.
+                        Previously, I worked at Accenture Labs in Dublin, 
+                        focusing on graph machine learning for biomedical knowledge discovery, where I contributed development of link prediction and question answering systems.
+                        <br>
+                        <br>
+                        I hold a PhD from the Swiss Federal Institute of Technology, Lausanne (EPFL), 
+                        where <a href="https://infoscience.epfl.ch/record/290061" target="_blank">my doctoral research centered on representation learning for multi-relational data</a>. 
+                        More recently, I pursued my interest in <a href="https://cogsci.ucd.ie/" target="_blank">Cognitive Science with a Master’s degree from University College Dublin (UCD)</a>. 
+                        This program offered me the chance to engage with a wide range of cognitive theories under the guidance of <a href="https://pworldrworld.com/fred/" target="_blank">Prof. Fred Cummins</a> and 
+                        <a href="https://people.ucd.ie/keith.a.wilson" target="_blank">Prof. Keith Wilson</a>. 
+                        For my graduation project, I conducted a comparative study on the entanglement of perception and action—examining how predictive processing, 
+                        as advanced by <a href="https://profiles.sussex.ac.uk/p493-andy-clark" target="_blank">Andy Clark</a>, contrasts with the enactive theory of cognition
+                        advocated by <a href="https://ezequieldipaolo.net/" target="_blank">Ezequiel Di Paolo</a>, with a particular focus on proactive modes of perception and action.
+                        <br>
+                        <br>
+                        I am influenced by the <a href="https://keithfrankish.github.io/articles/Frankish_What%20is%20illusionism_eprint.pdf" target="_blank">illusionist stance</a> in the theory of consciousness, 
+                        most notably articulated by <a href="https://www.keithfrankish.com/" target="_blank">Keith Frankish</a>.
+                        I am also a fan of the podcast series <a href="https://www.youtube.com/@MindChat" target="_blank"><em>Mind Chat</em></a>
+                        made by <a href="https://philipgoffphilosophy.com/" target="_blank">Philip Goff</a> 
+                        and <a href="https://www.keithfrankish.com/" target="_blank">Keith Frankish</a>.
+                    </p>
                     
-                    <div style="display: flex; justify-content: space-between; flex-wrap: wrap;">
-                        <div style="flex: 1; margin-right: 20px;">
-                            <h3>Interests</h3>
-                            <ul class="bullet-list">
-                                <li>Research Interest 1</li>
-                                <li>Research Interest 2</li>
-                                <li>Research Interest 3</li>
-                            </ul>
+                    <div class="bio-container">
+                        <div class="interests-box">
+                            <div>
+                                <h3>Interests in ML</h3>
+                                <ul class="bullet-list">
+                                    <li>World Models</li>
+                                    <li>Physics-informed Neural Nets</li>
+                                    <li>Physical AI</li>
+                                    <li>Knowledge Graph Reasoning</li>
+                                    <li>Graph Represenation Learning</li>
+                                </ul>
+                            </div>
+                            <div>
+                                <h3>Interests in CogSci</h3>
+                                <ul class="bullet-list">
+                                    <li>Philosophy of AI</li>
+                                    <li>Philosophy of Physics</li>
+                                    <li>Conciousness</li>
+                                    <li>Metaphysics</li>
+                                    <li>Predictive Processing</li>
+                                    <li>Enactivism</li>
+                                    <li>Illusionism</li>
+                                    <li>Antinatalism</li>
+                                </ul>
+                            </div>
                         </div>
-                        <div style="flex: 1;">
+                        <div>
                             <h3>Education</h3>
-                            <ul class="bullet-list education">
-                                <li> PhD, University Name, Year</li>
-                                <li> M.S., University Name, Year</li>
-                                <li> B.S., University Name, Year</li>
-                            </ul>
+                                <ul class="bullet-list education">
+                                    <li>
+                                        <img src="https://upload.wikimedia.org/wikipedia/en/6/6e/University_College_Dublin_logo.svg" width="40" height="40">
+                                        <div>
+                                            MSc in CogSci, 2025<br>
+                                            University College Dublin, Ireland
+                                        </div>
+                                    </li>
+                                    <li>
+                                        <img src="https://upload.wikimedia.org/wikipedia/commons/9/95/Logo_EPFL_2019.svg" width="40" height="40">
+                                        <div>
+                                            PhD in CS, 2021<br>
+                                            EPFL, Switzerland
+                                        </div>
+                                    </li>
+                                    <li>
+                                        <img src="https://upload.wikimedia.org/wikipedia/commons/d/d8/METU_logo.svg" width="40" height="40">
+                                        <div>
+                                            MSc in EEE, 2017<br>
+                                            Middle East Technical University, Turkey
+                                        </div>
+                                    </li>
+                                    <li>
+                                        <img src="https://upload.wikimedia.org/wikipedia/commons/d/d8/METU_logo.svg" width="40" height="40">
+                                        <div>
+                                            BSc in EEE, 2013<br>
+                                            Middle East Technical University, Turkey
+                                        </div>
+                                    </li>
+                                </ul>
                         </div>
                     </div>
                 </div>
@@ -167,7 +124,7 @@
         ---
 
         <div id="essays" class="section gray-bg">
-            <h2 class="section-title">Essays on Cognitive Science</h2>
+            <h2 class="section-title">Essays in Philosophy and Cognitive Science</h2>
             <ul>
                 <li><strong>Essay Title 1</strong> (Date) - <a href="essay1.pdf" target="_blank">Read PDF</a></li>
                 <li><strong>Essay Title 2</strong> (Date) - <a href="essay2.pdf" target="_blank">Read PDF</a></li>
@@ -179,22 +136,32 @@
 
         <div id="papers" class="section white-bg">
             <h2 class="section-title">Papers in Machine Learning</h2>
+            ℹ️ Please check <a href="https://scholar.google.com/citations?user=0Y-meVgAAAAJ&hl=en" target="_blank">my Google Scholar page</a> to see full and updated list of publications.
             <div class="paper-box">
-                <p>Citation for Paper 1. Authors, "Paper Title," <em>Journal/Conference</em>, Year.</p>
+                <p>Bayram, Eda. "Propagation on multi-relational graphs for node regression." <em>International Conference on Complex Networks and Their Applications.</em> Cham: Springer International Publishing, 2021.</p>
                 <div class="paper-links">
-                    <a href="https://external.link/to/pdf" target="_blank">PDF</a>
-                    <a href="https://external.link/to/code" target="_blank">Code</a>
-                    <a href="https://external.link/to/poster" target="_blank">Poster</a>
-                    <a href="https://external.link/to/video" target="_blank">Video</a>
+                    <a href="https://arxiv.org/pdf/2110.08185.pdf" target="_blank">PDF</a>
+                    <a href="https://github.com/bayrameda/MrAP" target="_blank">Code</a>
+                    <a href="http://lr2020.iit.demokritos.gr/posters/57.pdf" target="_blank">Poster</a>
+                    <a href="https://drive.google.com/file/d/1QRJBdK3krVoSHyjkVF1INnMiMXEdnlYJ/view?usp=sharing" target="_blank">Video</a>
                 </div>
             </div>
             <div class="paper-box">
-                <p>Citation for Paper 2. Authors, "Paper Title," <em>Journal/Conference</em>, Year.</p>
+                <p>Bayram, Eda, Alberto García-Durán, and Robert West. "Node attribute completion in knowledge graphs with multi-relational propagation." <em>ICASSP 2021-2021 IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP).</em> IEEE, 2021.</p>
                 <div class="paper-links">
-                    <a href="https://external.link/to/pdf" target="_blank">PDF</a>
-                    <a href="https://external.link/to/code" target="_blank">Code</a>
-                    <a href="https://external.link/to/poster" target="_blank">Poster</a>
-                    <a href="https://external.link/to/video" target="_blank">Video</a>
+                    <a href="https://arxiv.org/pdf/2011.05301.pdf" target="_blank">PDF</a>
+                    <a href="https://github.com/bayrameda/MrAP" target="_blank">Code</a>
+                    <a href="https://drive.google.com/file/d/12pnn7h3ozl3FBcvXUu3oponTcCWMu16Z/view?usp=sharing" target="_blank">Poster</a>
+                    <a href="https://confcats-event-sessions.s3.amazonaws.com/icassp21/videos/4911.mp4?cyrwu13SqZgFyTMo1jq7VTWx8JgF9Ubk=" target="_blank">Video</a>
+                </div>
+            </div>
+            <div class="paper-box">
+                <p>Bayram, Eda, et al. "Mask combination of multi-layer graphs for global structure inference." <em>IEEE Transactions on Signal and Information Processing over Networks 6 (2020): 394-406.</em></p>
+                <div class="paper-links">
+                    <a href="https://arxiv.org/pdf/1910.10114.pdf" target="_blank">PDF</a>
+                    <a href="https://github.com/bayrameda/MaskLearning" target="_blank">Code</a>
+                    <a href="https://drive.google.com/file/d/1ri4m5X1aR62v25x3bXfNQts7WAIlgkuL/view?usp=sharing" target="_blank">Poster</a>
+                    <a href="https://confcats-event-sessions.s3.amazonaws.com/icassp21/videos/5601.mp4?pSLLvNN32K5O7rpsHm_Tb9YREbWXvGfR=" target="_blank">Video</a>
                 </div>
             </div>
         </div>
@@ -204,11 +171,15 @@
         <div id="patents" class="section gray-bg">
             <h2 class="section-title">Patents</h2>
             <div class="paper-box">
-                <p>Citation for Patent 1. Inventors, "Patent Title," Patent No. XXXXXXX, Date.</p>
+                <p> Adrianna Janik, Eda Bayram, Alberto Bernardi "Explanations for Knowledge Graph Embedding Models Based on Game Theory", Italian Patent Application 102023000017535 filed in August 23, 2023</p>
                 <img src="patent1-image.png" alt="Patent 1" class="patent-image">
             </div>
             <div class="paper-box">
-                <p>Citation for Patent 2. Inventors, "Patent Title," Patent No. XXXXXXX, Date.</p>
+                <p> <a href="https://patents.google.com/patent/US20250028975A1/en" target="_blank">Bayram, Eda, and Adrianna JANIK. "Rule-Based Hypothesis Refinement for Link Prediction Systems." U.S. Patent Application No. 18/356,832.</a></p>
+                <img src="patent1-image.png" alt="Patent 1" class="patent-image">
+            </div>
+            <div class="paper-box">
+                <p> <a href="https://patents.google.com/patent/US20240256917A1/en" target="_blank">Bayram, Eda, and Luca Costabello. "Ontology-driven parameter efficient representations for knowledge graphs." U.S. Patent Application No. 18/161,260.</a></p>
                 <img src="patent2-image.png" alt="Patent 2" class="patent-image">
             </div>
         </div>
@@ -216,5 +187,4 @@
     </div>
 
 </body>
-
 </html>
